make sure the node is always at an integer position

with fractional scaling sometimes nodes are positioned not only in non
integer logical pixels, but end up being positioned also at non integer
device pixels, making textures badly rendered

BUG: 464069